ConvertCobol/ACUCOBOLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ACUCOBOL.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ACUCOBOLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, STRING_LITERAL=21, NUMBER=22, FILENAME=23, 
		VAR_NAME=24, SECTION_NAME=25, PARAGRAPH_NAME=26, PIC_TYPE=27, IDENTIFICATION=28, 
		DIVISION=29, PROGRAM_ID=30, DATA=31, WORKING_STORAGE=32, FILE=33, REDEFINES=34, 
		OCCURS=35, TIMES_KEYWORD=36, PROCEDURE=37, MOVE=38, TO=39, DISPLAY=40, 
		COMPUTE=41, IF=42, THEN=43, ELSE=44, END_IF=45, OPEN=46, CLOSE=47, READ=48, 
		WRITE=49, REWRITE=50, START=51, AT=52, END=53, STOP=54, RUN=55, GOBACK=56, 
		COPY=57, CALL=58, USING=59, SQL=60, EXEC=61, CONNECT=62, AS=63, SELECT=64, 
		INSERT=65, UPDATE=66, DELETE=67, STRING=68, DELIMITED=69, BY_KEYWORD=70, 
		INTO=71, WITH=72, POINTER=73, ACCEPT=74, FROM_KEYWORD=75, VALUE=76, ZERO=77, 
		ZEROS=78, SPACE=79, SPACES=80, HIGH_VALUE=81, HIGH_VALUES=82, LOW_VALUE=83, 
		LOW_VALUES=84, QUOTE=85, QUOTES=86, COMP=87, COMP_1=88, COMP_2=89, COMP_3=90, 
		COMP_4=91, COMP_5=92, BINARY=93, USAGE=94, FD=95, LINKAGE=96, SECTION=97, 
		VARYING=98, WS=99, PIC_FORMAT=100, PIC_STRING=101, PIC_CHAR=102, PIC_REPETITION=103, 
		END_EXEC=104, PERFORM=105, BY=106, FROM=107;
	public const int
		RULE_program = 0, RULE_dataDivision = 1, RULE_workingStorageSection = 2, 
		RULE_fileSection = 3, RULE_fileDescription = 4, RULE_recordDeclaration = 5, 
		RULE_linkageSection = 6, RULE_variableDeclaration = 7, RULE_procedureDivision = 8, 
		RULE_paragraph = 9, RULE_paragraphName = 10, RULE_sentence = 11, RULE_statement = 12, 
		RULE_moveStatement = 13, RULE_displayStatement = 14, RULE_sqlStatement = 15, 
		RULE_sqlConnect = 16, RULE_sqlQuery = 17, RULE_callStatement = 18, RULE_stopStatement = 19, 
		RULE_gobackStatement = 20, RULE_ifStatement = 21, RULE_performStatement = 22, 
		RULE_startValue = 23, RULE_initialValue = 24, RULE_incrementValue = 25, 
		RULE_endValue = 26, RULE_fileStatement = 27, RULE_copyStatement = 28, 
		RULE_computeStatement = 29, RULE_stringStatement = 30, RULE_acceptStatement = 31, 
		RULE_condition = 32, RULE_expression = 33, RULE_term = 34, RULE_factor = 35, 
		RULE_value = 36, RULE_constant = 37;
	public static readonly string[] ruleNames = {
		"program", "dataDivision", "workingStorageSection", "fileSection", "fileDescription", 
		"recordDeclaration", "linkageSection", "variableDeclaration", "procedureDivision", 
		"paragraph", "paragraphName", "sentence", "statement", "moveStatement", 
		"displayStatement", "sqlStatement", "sqlConnect", "sqlQuery", "callStatement", 
		"stopStatement", "gobackStatement", "ifStatement", "performStatement", 
		"startValue", "initialValue", "incrementValue", "endValue", "fileStatement", 
		"copyStatement", "computeStatement", "stringStatement", "acceptStatement", 
		"condition", "expression", "term", "factor", "value", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "','", "'='", "'('", "')'", "'<'", "'>'", "'<='", "'>='", 
		"'NOT ='", "'IS'", "'NUMERIC'", "'ALPHABETIC'", "'ALPHANUMERIC'", "'AND'", 
		"'OR'", "'+'", "'-'", "'*'", "'/'", null, null, null, null, null, null, 
		"'PIC'", "'IDENTIFICATION'", "'DIVISION'", "'PROGRAM-ID'", "'DATA'", "'WORKING-STORAGE'", 
		"'FILE'", "'REDEFINES'", "'OCCURS'", "'TIMES'", "'PROCEDURE'", "'MOVE'", 
		"'TO'", "'DISPLAY'", "'COMPUTE'", "'IF'", "'THEN'", "'ELSE'", "'END-IF'", 
		"'OPEN'", "'CLOSE'", "'READ'", "'WRITE'", "'REWRITE'", "'START'", "'AT'", 
		"'END'", "'STOP'", "'RUN'", "'GOBACK'", "'COPY'", "'CALL'", "'USING'", 
		"'SQL'", "'EXEC'", "'CONNECT'", "'AS'", "'SELECT'", "'INSERT'", "'UPDATE'", 
		"'DELETE'", "'STRING'", "'DELIMITED'", "'BY'", "'INTO'", "'WITH'", "'POINTER'", 
		"'ACCEPT'", "'FROM'", "'VALUE'", "'ZERO'", "'ZEROS'", "'SPACE'", "'SPACES'", 
		"'HIGH-VALUE'", "'HIGH-VALUES'", "'LOW-VALUE'", "'LOW-VALUES'", "'QUOTE'", 
		"'QUOTES'", "'COMP'", "'COMP-1'", "'COMP-2'", "'COMP-3'", "'COMP-4'", 
		"'COMP-5'", "'BINARY'", "'USAGE'", "'FD'", "'LINKAGE'", "'SECTION'", "'VARYING'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "STRING_LITERAL", 
		"NUMBER", "FILENAME", "VAR_NAME", "SECTION_NAME", "PARAGRAPH_NAME", "PIC_TYPE", 
		"IDENTIFICATION", "DIVISION", "PROGRAM_ID", "DATA", "WORKING_STORAGE", 
		"FILE", "REDEFINES", "OCCURS", "TIMES_KEYWORD", "PROCEDURE", "MOVE", "TO", 
		"DISPLAY", "COMPUTE", "IF", "THEN", "ELSE", "END_IF", "OPEN", "CLOSE", 
		"READ", "WRITE", "REWRITE", "START", "AT", "END", "STOP", "RUN", "GOBACK", 
		"COPY", "CALL", "USING", "SQL", "EXEC", "CONNECT", "AS", "SELECT", "INSERT", 
		"UPDATE", "DELETE", "STRING", "DELIMITED", "BY_KEYWORD", "INTO", "WITH", 
		"POINTER", "ACCEPT", "FROM_KEYWORD", "VALUE", "ZERO", "ZEROS", "SPACE", 
		"SPACES", "HIGH_VALUE", "HIGH_VALUES", "LOW_VALUE", "LOW_VALUES", "QUOTE", 
		"QUOTES", "COMP", "COMP_1", "COMP_2", "COMP_3", "COMP_4", "COMP_5", "BINARY", 
		"USAGE", "FD", "LINKAGE", "SECTION", "VARYING", "WS", "PIC_FORMAT", "PIC_STRING", 
		"PIC_CHAR", "PIC_REPETITION", "END_EXEC", "PERFORM", "BY", "FROM"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ACUCOBOL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ACUCOBOLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ACUCOBOLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ACUCOBOLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFICATION() { return GetToken(ACUCOBOLParser.IDENTIFICATION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROGRAM_ID() { return GetToken(ACUCOBOLParser.PROGRAM_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SECTION_NAME() { return GetToken(ACUCOBOLParser.SECTION_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DataDivisionContext dataDivision() {
			return GetRuleContext<DataDivisionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureDivisionContext procedureDivision() {
			return GetRuleContext<ProcedureDivisionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIVISION() { return GetToken(ACUCOBOLParser.DIVISION, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(IDENTIFICATION);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DIVISION) {
				{
				State = 77;
				Match(DIVISION);
				}
			}

			State = 80;
			Match(PROGRAM_ID);
			State = 81;
			Match(SECTION_NAME);
			State = 82;
			Match(T__0);
			State = 83;
			dataDivision();
			State = 84;
			procedureDivision();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DataDivisionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DATA() { return GetToken(ACUCOBOLParser.DATA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIVISION() { return GetToken(ACUCOBOLParser.DIVISION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WorkingStorageSectionContext workingStorageSection() {
			return GetRuleContext<WorkingStorageSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileSectionContext fileSection() {
			return GetRuleContext<FileSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LinkageSectionContext linkageSection() {
			return GetRuleContext<LinkageSectionContext>(0);
		}
		public DataDivisionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dataDivision; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterDataDivision(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitDataDivision(this);
		}
	}

	[RuleVersion(0)]
	public DataDivisionContext dataDivision() {
		DataDivisionContext _localctx = new DataDivisionContext(Context, State);
		EnterRule(_localctx, 2, RULE_dataDivision);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(DATA);
			State = 87;
			Match(DIVISION);
			State = 88;
			Match(T__0);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WORKING_STORAGE) {
				{
				State = 89;
				workingStorageSection();
				}
			}

			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==FILE) {
				{
				State = 92;
				fileSection();
				}
			}

			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LINKAGE) {
				{
				State = 95;
				linkageSection();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WorkingStorageSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WORKING_STORAGE() { return GetToken(ACUCOBOLParser.WORKING_STORAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SECTION() { return GetToken(ACUCOBOLParser.SECTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext[] variableDeclaration() {
			return GetRuleContexts<VariableDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration(int i) {
			return GetRuleContext<VariableDeclarationContext>(i);
		}
		public WorkingStorageSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_workingStorageSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterWorkingStorageSection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitWorkingStorageSection(this);
		}
	}

	[RuleVersion(0)]
	public WorkingStorageSectionContext workingStorageSection() {
		WorkingStorageSectionContext _localctx = new WorkingStorageSectionContext(Context, State);
		EnterRule(_localctx, 4, RULE_workingStorageSection);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(WORKING_STORAGE);
			State = 99;
			Match(SECTION);
			State = 100;
			Match(T__0);
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 101;
				variableDeclaration();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==VAR_NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILE() { return GetToken(ACUCOBOLParser.FILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SECTION() { return GetToken(ACUCOBOLParser.SECTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FileDescriptionContext[] fileDescription() {
			return GetRuleContexts<FileDescriptionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileDescriptionContext fileDescription(int i) {
			return GetRuleContext<FileDescriptionContext>(i);
		}
		public FileSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterFileSection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitFileSection(this);
		}
	}

	[RuleVersion(0)]
	public FileSectionContext fileSection() {
		FileSectionContext _localctx = new FileSectionContext(Context, State);
		EnterRule(_localctx, 6, RULE_fileSection);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(FILE);
			State = 107;
			Match(SECTION);
			State = 108;
			Match(T__0);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 109;
				fileDescription();
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==FD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileDescriptionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FD() { return GetToken(ACUCOBOLParser.FD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR_NAME() { return GetToken(ACUCOBOLParser.VAR_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RecordDeclarationContext[] recordDeclaration() {
			return GetRuleContexts<RecordDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RecordDeclarationContext recordDeclaration(int i) {
			return GetRuleContext<RecordDeclarationContext>(i);
		}
		public FileDescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileDescription; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterFileDescription(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitFileDescription(this);
		}
	}

	[RuleVersion(0)]
	public FileDescriptionContext fileDescription() {
		FileDescriptionContext _localctx = new FileDescriptionContext(Context, State);
		EnterRule(_localctx, 8, RULE_fileDescription);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(FD);
			State = 115;
			Match(VAR_NAME);
			State = 116;
			Match(T__0);
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 117;
				recordDeclaration();
				}
				}
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==VAR_NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RecordDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR_NAME() { return GetToken(ACUCOBOLParser.VAR_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIC_TYPE() { return GetToken(ACUCOBOLParser.PIC_TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIC_FORMAT() { return GetToken(ACUCOBOLParser.PIC_FORMAT, 0); }
		public RecordDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_recordDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterRecordDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitRecordDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public RecordDeclarationContext recordDeclaration() {
		RecordDeclarationContext _localctx = new RecordDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_recordDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			Match(VAR_NAME);
			State = 123;
			Match(PIC_TYPE);
			State = 124;
			Match(PIC_FORMAT);
			State = 125;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinkageSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINKAGE() { return GetToken(ACUCOBOLParser.LINKAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SECTION() { return GetToken(ACUCOBOLParser.SECTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext[] variableDeclaration() {
			return GetRuleContexts<VariableDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration(int i) {
			return GetRuleContext<VariableDeclarationContext>(i);
		}
		public LinkageSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linkageSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.EnterLinkageSection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IACUCOBOLListener typedListener = listener as IACUCOBOLListener;
			if (typedListener != null) typedListener.ExitLinkageSection(this);
		}
	}

	[RuleVersion(0)]
	public LinkageSectionContext linkageSection() {
		LinkageSectionContext _localctx = new LinkageSectionContext(Context, State);
		EnterRule(_localctx, 12, RULE_linkageSection);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			Match(LINKAGE);
			State = 128;
			Match(SECTION);
			State = 129;
			Match(T__0);
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 130;
				variableDeclaration();
				}
				}
				State = 133;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==VAR_NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
